@@ -1,0 +1,6 @@
+:host {
+  display: block;
+  max-width: 120rem;
+  margin: 0 auto;
+  height: 100%;
+}
