@@ -708,8 +708,8 @@ body {
 }
 
 body {
-  background-color: dc.$omv-color-corporate-light;
-  font-family: theme.$omv-font-family-default;
+  background-color: var(--mat-background-color-body);
+  font-family: var(--mat-font-family-body);
   margin: 0;
 }
 
