@@ -1,6 +1,8 @@
 openmediavault (6.5.8-1) stable; urgency=low
 
   * Fix bug in NFS configuration.
+  * Limit width of page body to 1900px. The page content will be
+    centered for greater browser window sizes.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Thu, 10 Aug 2023 21:57:35 +0200
 
